<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignUp">

    <ImageView
        android:id="@+id/senderProfilePicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/backrounddesert"
        android:contentDescription="@string/profile"
        android:scaleType="centerCrop"
        android:src="@drawable/profile" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/senderProfilePicture"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="name"
        android:background="@drawable/edt_background"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_name"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edt_background"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_email"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="password"
        android:background="@drawable/edt_background"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/Sign_up"
        android:textColor="#5D4037"
        android:background="@drawable/btn_background" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="678dp"
        android:visibility="gone"/>

</RelativeLayout>
