<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backrounddesert"
    tools:context=".view.LogIn">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.0" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="543dp"/>

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="104dp"
        android:layout_height="106dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/message_box_background"
        android:src="@drawable/chatlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/app_logo"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"

        android:background="@drawable/edt_background"
        android:hint="@string/Email_User"
        android:paddingStart="13dp"
        android:paddingEnd="2dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edt_email"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"

        android:background="@drawable/edt_background"
        android:hint="@string/Password_User"
        android:paddingStart="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="209dp"
        android:layout_height="60dp"
        android:layout_below="@+id/edt_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"

        android:background="@drawable/backbutton"


        android:text="@string/LogIn"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="207dp"
        android:layout_height="60dp"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="32dp"

        android:background="@drawable/backbutton"
        android:text="@string/Sign_IN"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:circularflow_angles="20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:ignore="TextSizeCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0.90dp"
        app:layout_constraintGuide_percent="1.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
